--- a/lib/ceedling/objects.yml
+++ b/lib/ceedling/objects.yml
@@ -13,6 +13,15 @@ system_wrapper:
 
 cmock_builder:
 
+cmock_extra_headers:
+  compose:
+    - configurator
+    - preprocessinator_includes_handler
+    - test_includes_extractor
+    - file_path_utils
+    - yaml_wrapper
+    - file_wrapper
+
 reportinator:
 
 rake_utils:
@@ -186,6 +195,7 @@ generator:
     - generator_helper
     - preprocessinator
     - cmock_builder
+    - cmock_extra_headers
     - generator_test_runner
     - generator_test_results
     - flaginator
@@ -279,6 +289,7 @@ test_invoker:
     - build_invoker_utils
     - file_path_utils
     - file_wrapper
+    - cmock_extra_headers
 
 test_invoker_helper:
   compose:
